# periodic-table

./: .gitignore  README.md  pyproject.toml
periodic_table/: __init__.py  cli.py  config.py  data.py  engine.py  exceptions.py  lookup.py  noble_gas.py
tests/: test_cli.py  test_engine.py  test_exceptions.py  test_lookup.py  test_noble_gas.py
