[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "periodic-table"
version = "1.0.0"
description = "A clean periodic table package with electron configuration and noble-gas shorthand logic."
authors = [
    { name = "Manoj" }
]
readme = "README.md"
requires-python = ">=3.10"

# If you ever add dependencies, list them here:
# dependencies = ["numpy", "requests"]

[project.urls]
Homepage = "https://example.com"
